[tool.poetry]
name = "tinkoff-start"
version = "0.1.0"
description = ""
authors = ["boldyrevn <boldyrev.now@mail.ru>"]
readme = "README.md"
packages = [{include = "tinkoff_start"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
